updated base SCSS structure and framework, dependencies, and added backup scripts for rclone

--- a/cms/templates/_errors/503.twig
+++ b/cms/templates/_errors/503.twig
@@ -1,5 +1,5 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
-{% extends "_layouts/_layout.twig" %}
+{% extends "_layouts/layout.twig" %}
 
 {% block _inline_css %}
     <style>
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-    <section class="section is-medium animatable missing-page-error-section">
-        <div class="page-container is-small-desktop">
+    <section class="section section--medium animatable missing-page-error-section">
+        <div class="container">
             <div class="missing-page-error text-center">
                 <h2>Sorry, something's up with our site (503).</h2>
                 <p>
