--- a/cms/templates/_errors/offline.twig
+++ b/cms/templates/_errors/offline.twig
@@ -1,5 +1,5 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
-{% extends "_layouts/_layout.twig" %}
+{% extends "_layouts/layout.twig" %}
 
 {% block _inline_css %}
 {% endblock %}
