--- a/cms/templates/_partials/blocks/image.twig
+++ b/cms/templates/_partials/blocks/image.twig
@@ -25,7 +25,7 @@
 {% endif %}
 
 <section class="section section--small section-{{ block_type}}-block animatable">
-    <div class="container container--small">
+    <div class="container">
         {% if heading|length %}
             <h2 class="heading">{{ heading | typogrify(true) }}</h2>
         {% endif %}
