--- a/cms/templates/index.twig
+++ b/cms/templates/index.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<section class="section is-small animatable">
-    <div class="page-container">
-        <h1>Welcome to Craft Starter</h1>
+<section class="section section--medium animatable">
+    <div class="container">
+        <h1 class="page--heading">Welcome to Craft Starter</h1>
         <p>Lets get this new website up and running!</p>
         <p>
             Quick note - don't use index.twig for templates. Set up a new entry in the dashboard, using the "_pages/home.twig" template.
