--- a/src/scss/_foundation-settings.scss
+++ b/src/scss/_foundation-settings.scss
@@ -1,3 +1,8 @@
+/********************************************************************************************************
+* Foundation Settings - default rules copied directly from Foundation's boilerplate SCSS configuration. 
+* To make changes, copy relevant styles to  _variables.scss and adjust there. 
+********************************************************************************************************/
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
