--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,5 +1,7 @@
-/* _functions.scss - some handy SCSS functions to make things easier */
-/* Inspired by https://itnext.io/advanced-use-of-sass-maps-bd5a47ca0d1a and https://gist.github.com/garystorey/5920051 */
+/********************************************************************************************************
+* Functions - some handy SCSS functions to make things easier
+* Inspired by https://itnext.io/advanced-use-of-sass-maps-bd5a47ca0d1a and https://gist.github.com/garystorey/5920051
+********************************************************************************************************/
 
 // ---------------------------------------------------------
 // deep-map-get
