--- a/cms/templates/_errors/404.twig
+++ b/cms/templates/_errors/404.twig
@@ -1,13 +1,13 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
-{% extends "_layouts/_layout.twig" %}
+{% extends "_layouts/layout.twig" %}
 
 {% block _inline_css %}
 {% endblock %}
 
 {% block content %}
 
-    <section class="section is-medium animatable missing-page-error-section">
-        <div class="page-container is-small-desktop">
+    <section class="section section--medium animatable missing-page-error-section">
+        <div class="container">
             <div class="missing-page-error text-center">
                 <h2>Sorry, you might be lost (404).</h2>
                 <p>
