--- a/cms/templates/_pages/home.twig
+++ b/cms/templates/_pages/home.twig
@@ -5,26 +5,14 @@
 {% endblock %}
 
 {% block content %}
-<section class="section section--small animatable">
-    <div class="container">
-        <h2>Welcome to the BWS bootstrap theme for Craft CMS</h2>
-        <p>Looks like everything is set up properly!</p>
+<section class="section section--medium animatable">
+    <div class="container container--small">
+        <h1 class="page--heading">Welcome to Craft CMS!</h1>
+        <p>
+            Check out the <a href="https://github.com/joeRob2468/bws-craft-starter-bootstrap" target="_blank">documentation for the Boyer Web Studios starter project</a> for some tips, and you can read the <a href="https://docs.craftcms.com/v3/" target="_blank">Craft CMS documentation</a> to learn how Craft CMS works. You also might find the <a href="https://get.foundation/sites/docs/xy-grid.html" target="_blank">Foundation XY Grid documentation</a> helpful.
+        </p>
     </div>
 </section>
-
-<section class="section section--small animatable">
-	<div class="container">
-        <div class="grid-x grid-margin-x">
-            <div class="cell medium-6">
-                This is an example column
-            </div>
-            <div class="cell medium-6">
-                This is an example column
-            </div>
-        </div>
-	</div>
-</section>
-
 
 {% include '_partials/components/content_builder' %}
 
