--- a/cms/templates/_partials/blocks/contact_form.twig
+++ b/cms/templates/_partials/blocks/contact_form.twig
@@ -1,12 +1,14 @@
 {# Contact Form Block #}
 {% import '_macros/_lazyImager' as LazyImager %}
 
+{% set block_type = "contact-form" %}
+
 {# Block variable defaults #}
 {% set heading = block['heading'] is defined ? block.heading : '' %}
 {% set rtfAdditionalContent = block['rtfAdditionalContent'] is defined ? block.rtfAdditionalContent : '' %}
 
-<section class="section section--small section-contact-form block-{{ block.type.handle }} animatable">
-    <div class="container container--small">
+<section class="section section--small section-{{ block_type }}-block animatable">
+    <div class="container">
         {% if heading|length %}<div class="form-header"><h1>{{ heading|typogrify(true) }}</h1></div>{% endif %}
         <div class="contact-form-container">
             <form class="contact-form" method="post" action="/" @submit.prevent="onSubmit" novalidate>
