--- a/cms/templates/_partials/blocks/text.twig
+++ b/cms/templates/_partials/blocks/text.twig
@@ -6,7 +6,7 @@
 {% set rtfContent = block['rtfContent'] is defined ? block.rtfContent : '' %}
 
 <section class="section section--small section-{{ block_type }}-block animatable">
-	<div class="container container--small">
+	<div class="container">
 		{% if heading|length %}
 			<h2 class="heading">{{ heading | typogrify(true) }}</h2>
 		{% endif %}
