--- a/cms/templates/_partials/components/footer.twig
+++ b/cms/templates/_partials/components/footer.twig
@@ -1,6 +1,8 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 <footer class="site-footer animatable">
-    <div class="container">
+    {# {% include '_partials/snippets/newsletter-signup' %} #}
+
+    <div class="container container--large">
         <div class="copyright">
             &copy;{{ now|date('Y') }}
         </div>
