--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,5 @@
-/* _fonts.scss - used to import google fonts or set up @font-face declarations for custom fonts */
+/********************************************************************************************************
+* Font Imports - used to import google fonts or set up @font-face declarations for custom fonts
+********************************************************************************************************/
 
-@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@700;800&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
